--- a/style.css
+++ b/style.css
@@ -98,7 +98,11 @@ img {
 
 .player {
   text-align: center;
-  color: #fff;
+  color: black;
   border: 1px solid red;
   width: 50%;
+}
+
+.active {
+  color: #fff !important;
 }
