changed color of button

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ img {
 }
 
 .btn {
-  background-color: red;
+  background-color: rgb(245, 183, 0);
   color: #fff;
   width: 40px;
   height: 40px;
